src/objects/sked_Job_Offer__c.object
<CustomObject>
    <fields>
        <fullName>sked_Date_Time_Accepted__c</fullName>
        <label>Date/Time Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked_Date_Time_Declined__c</fullName>
        <label>Date/Time Declined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked_Date_Time_Offered__c</fullName>
        <label>Date/Time Offered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked_Estimated_Distance__c</fullName>
        <label>Estimated Distance</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_Estimated_Travel_Time__c</fullName>
        <label>Estimated Travel Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_Job__c</fullName>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Job Offers</relationshipLabel>
        <relationshipName>sked_Job_Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked_Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Job Offers</relationshipLabel>
        <relationshipName>sked_Job_Offers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Job Offer</label>
    <nameField>
        <displayFormat>JO-{000000}</displayFormat>
        <label>Job Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>